hub-helper-once/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userlabsdev-network-policy
spec:
  podSelector:
    matchLabels:
      user-jupyterlab: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: userlabsdev
          podSelector:
            matchLabels:
              app: drf-k8smgr
      ports:
        - port: 8443
        - port: 8888
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              name: userlabsdev
          podSelector:
            matchLabels:
              app: drf-k8smgr
      ports:
        - port: 56789
        - port: 56788
        - port: 56787
        - port: 56786
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
